test/fixtures/console/stdin_messages.snapshot
[stdin]
[stdin]:*
with(this){__filename}
^^^^

SyntaxError: Strict mode code may not include a with statement
    at new Script (node:vm:*:*)
    at createScript (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal*process*execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal*process*execution:*:*)
    at evalScript (node:internal*process*execution:*:*)
    at node:internal*main*eval_stdin:*:*
    at Socket.<anonymous> (node:internal*process*execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
*
*
[stdin]:*
throw new Error("hello")
^

Error: hello
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal*process*execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal*process*execution:*:*)
    at evalScript (node:internal*process*execution:*:*)
    at node:internal*main*eval_stdin:*:*
    at Socket.<anonymous> (node:internal*process*execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
[stdin]:*
throw new Error("hello")
^

Error: hello
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal*process*execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal*process*execution:*:*)
    at evalScript (node:internal*process*execution:*:*)
    at node:internal*main*eval_stdin:*:*
    at Socket.<anonymous> (node:internal*process*execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *
*
[stdin]:*
let x = *; y = x;
               ^

ReferenceError: y is not defined
    at [stdin]:*:*
    at Script.runInThisContext (node:vm:*:*)
    at Object.runInThisContext (node:vm:*:*)
    at node:internal*process*execution:*:*
    at [stdin]-wrapper:*:*
    at runScript (node:internal*process*execution:*:*)
    at evalScript (node:internal*process*execution:*:*)
    at node:internal*main*eval_stdin:*:*
    at Socket.<anonymous> (node:internal*process*execution:*:*)
    at Socket.emit (node:events:*:*)

Node.js *

[stdin]:*
let ______________________________________________; throw *
                                                    ^
*
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *

[stdin]:*
let ______________________________________________; throw *
                                                    ^
*
(Use `node --trace-uncaught ...` to show where the exception was thrown)

Node.js *
done
